--- a/react-fe/src/pages/login/Login.css
+++ b/react-fe/src/pages/login/Login.css
@@ -1,5 +1,18 @@
+
+.login{
+    flex: 4;
+}
+
+.login-wrapper{
+    display: flex;
+    margin: 20px;
+    flex-direction: column;
+    align-items: center;
+}
+
+/* 
 .login-wrapper {
     display: flex;
     flex-direction: column;
     align-items: center;
-}
+} */
