--- a/react-fe/src/pages/login/Signup.css
+++ b/react-fe/src/pages/login/Signup.css
@@ -1,9 +1,8 @@
-
-.login{
+.register{
     flex: 4;
 }
 
-.login-wrapper{
+.register-wrapper{
     text-align: center;
     display: flex;
     margin: 20px;
@@ -11,9 +10,3 @@
     align-items: center;
 }
 
-/* 
-.login-wrapper {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-} */
